--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,9 +7,15 @@ body {
 	color: white;
 }
 
+input {
+	outline: none;
+	border-style: none;
+}
+
 .navbar {
 	backdrop-filter: blur(15px);
 	color: white;
+    font-family: 'Kanit', sans-serif;
 }
 
 .navbar-brand,
@@ -17,37 +23,52 @@ body {
 	color: white;
 }
 
-#hero {
-    margin: 300px 0px 30px 0px;
+#heroEl {
+	width: 80%;
+	backdrop-filter: blur(10px);
+	margin: auto;
+    margin-top: 20%;
+	padding: 30px;
+    border-radius: 15px;
 }
+
+#hero {
+    margin: 20px 0px;
+    font-size: 40pt;
+    font-family: 'Kanit', sans-serif;
+}
+
+/* #heroSpan {
+	background: -webkit-linear-gradient(rgb(255, 174, 0), rgb(215, 115, 0));
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+} */
 
 #promptEl {
 	display: flex;
 	background-color: white;
 	margin: auto;
-	width: 80%;
 	padding: 5px;
 	border-radius: 10px;
+}
+
+#prompt {
+	flex-grow: 1;
+	margin-left: 5px;
 }
 
 #submit,
 #submit:focus {
 	flex-shrink: 0;
 	justify-self: end;
-    background-image: linear-gradient(to right bottom, rgb(248, 180, 33), rgb(255, 136, 0));
-    border-style: none;
-    border-radius: 8px;
-    padding: 5px 15px;
-    margin: -2px;
-    color: white;
-}
-
-input {
-	outline: none;
+	background-image: linear-gradient(
+		to right bottom,
+		rgb(248, 180, 33),
+		rgb(255, 136, 0)
+	);
 	border-style: none;
-}
-
-#prompt {
-	flex-grow: 1;
-    margin-left: 5px;
+	border-radius: 8px;
+	padding: 5px 15px;
+	margin: -2px;
+	color: white;
 }
