fixed some margins

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ input {
 }
 
 #hero {
-    margin: 20px 0px;
+    margin: 0px 0px 15px;
     font-size: 40pt;
     font-family: 'Kanit', sans-serif;
 }
