--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,13 @@ input {
     font-weight: 400;
 }
 
+#loginEl {
+    width: 500px;
+    margin: auto;
+    margin-top: 100px;
+    color: black;
+}
+
 #galleryEl {
     background-color: rgb(37, 42, 46);
     width: 95%;
