coded 3 files in partials folder

--- a/views/partials/userCreated-images.handlebars
+++ b/views/partials/userCreated-images.handlebars
@@ -1,10 +1,12 @@
+<!-- This file creates a card for each user created image on the user's gallery page -->
 <section class="card">
-  <a href="/painting/{{id}}">
+  <a href="/userGallery/{{id}}">
     <header>{{title}}</header>
 
     <div class="card-body">
-      <img src="/images/{{filename}}" alt="{{description}}">
-      <p>Created By: {{artist}}</p>
+       <!-- next line will need to be adjusted when image source identified -->
+      <img src="/db/{{filename}}" alt="{{description}}">
+      <p>Created By: {{user}}</p>
       <p>Date Created: {{timestamp}}</p>
     </div>
   </a>
