--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ body {
 	background-position-x: center;
 	background-repeat: no-repeat;
 	background-size: 2000px;
+	font-family: "Kanit", sans-serif;
 	color: white;
 }
 
