--- a/views/user-gallery.handlebars
+++ b/views/user-gallery.handlebars
@@ -1,20 +1,13 @@
-<section id="galleryEl" class="">
-			<div class="card bg-dark">
-				<img
-					id="placeholder"
-					src="../public/assets/1024x1024.png"
-					class="card-img-top"
-				/>
-				<div class="card-body">Content</div>
-				<div class="card-footer">Footer</div>
-			</div>
-			<div class="card bg-dark">
-
-				<img
-					id="placeholder"
-					src="../public/assets/1024x1024.png"
-					class="card-img-top"
-				<div class="card-body">Content</div>
-				<div class="card-footer">Footer</div>
+<section id="galleryEl" class="container-fluid d-flex">
+			<div class="row">
+			<div class="col-lg-4 col-md-6 col-sm-12">
+					<img
+						id="placeholder"
+						src="../public/assets/1024x1024.png"
+						class="card-img-top mt-3"
+					/>
+					<div class="card-body">Content</div>
+					<div class="card-footer">Footer</div>
+				</div>
 			</div>
 		</section>
