--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<div class="navbar-nav">
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link" href="#">Home</a>
 						</div>
 						<div class="nav-item">
 							<a class="nav-link" href="#">Gallery</a>
