--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,18 @@ input {
 	font-weight: 400;
 }
 
+#resultEl {
+	margin: 5%;
+	width: auto;
+	color: black;
+}
+
+#resultImg {
+	margin: 25px 15px;
+	border-radius: 8px;
+	max-width: max-content;
+}
+
 #loginEl {
 	width: 500px;
 	margin: auto;
