--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ input {
 	backdrop-filter: blur(15px);
 	color: white;
 	font-family: "Kanit", sans-serif;
+	border: 2px solid rgba(0, 0, 0, 0.095);
 }
 
 .nav-link.active, .nav-link.hover, .nav-link.focus {
@@ -49,6 +50,7 @@ input {
 	margin-top: 20%;
 	padding: 30px;
 	border-radius: 15px;
+	border: 2px solid rgba(0, 0, 0, 0.095);
 }
 
 #hero {
