--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,14 +57,12 @@ input {
 	margin: 0px 0px 15px;
 	font-size: 40pt;
 	font-family: "Kanit", sans-serif;
-	font-weight: 800;
+	font-weight: 400;
 }
 
-/* #heroSpan {
-	background: -webkit-linear-gradient(rgb(158, 145, 0), rgb(104, 207, 0));
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-} */
+#heroSpan {
+	font-weight: 700;
+}
 
 #promptEl {
 	display: flex;
