--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,43 +1,42 @@
-	<section
-			id="loginEl"
-			class=""
-			style="font-family: 'Kanit', sans-serif; font-weight: 400"
-		>
-			<div class="card mx-auto">
-				<div class="card-header">headspace.ai</div>
-				<div class="card-body">
-					<h5 class="card-title">Register</h5>
-					<form>
-						<div class="form-group">
-							<label for="emailForm">Email address</label>
-							<input
-								type="email"
-								class="form-control"
-								id="emailForm"
-								aria-describedby="emailHelp"
-								placeholder="Enter email"
-							/>
-							<small id="emailHelp" class="form-text text-muted"
-								>Have an account? <a href="">Login here instead.</a></small
-							>
-						</div>
-						<div class="form-group">
-							<label for="passwordForm">Password</label>
-							<input
-								type="password"
-								class="form-control"
-								id="passwordForm"
-								placeholder="Password"
-							/>
-						</div>
-						<button
-							type="submit"
-							class="btn btn-warning"
-							style="margin-top: 15px; width: 200px"
-						>
-							Submit
-						</button>
-					</form>
+<section
+	id="loginEl"
+	class=""
+	style="font-family: 'Kanit', sans-serif; font-weight: 400"
+>
+	<div class="card mx-auto">
+		<div class="card-header">headspace.ai</div>
+		<div class="card-body">
+			<h5 class="card-title">Register</h5>
+			<form>
+				<div class="form-group">
+					<label for="emailForm">Email address</label>
+					<input
+						type="email"
+						class="form-control"
+						id="emailForm"
+						aria-describedby="emailHelp"
+						placeholder="Enter email"
+					/>
+					<small id="emailHelp" class="form-text text-muted">Have an account?
+						<a href="">Login here instead.</a></small>
 				</div>
-			</div>
-		</section>
+				<div class="form-group">
+					<label for="passwordForm">Password</label>
+					<input
+						type="password"
+						class="form-control"
+						id="passwordForm"
+						placeholder="Password"
+					/>
+				</div>
+				<button
+					type="submit"
+					class="btn btn-warning"
+					style="margin-top: 15px; width: 200px"
+				>
+					Submit
+				</button>
+			</form>
+		</div>
+	</div>
+</section>
