--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -9,6 +9,13 @@
 			<h5 class="card-title">Register</h5>
 			<form>
 				<div class="form-group">
+					<label for="userForm">Username</label>
+					<input
+						type="username"
+						class="form-control"
+						id="userForm"
+						placeholder="Enter username"
+					/>
 					<label for="emailForm">Email address</label>
 					<input
 						type="email"
