added icon for logout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,7 +57,8 @@
 								My Gallery</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link" href="#">Logout</a>
+							<a class="nav-link" href="#"><i class="bi bi-box-arrow-right"></i>
+								Logout</a>
 						</div>
 					</div>
 				</div>
