--- a/views/partials/image.handlebars
+++ b/views/partials/image.handlebars
@@ -1,11 +1,11 @@
-<div class="col-lg-4 col-md-6 col-sm-12">
+{{!-- <div class="col-lg-4 col-md-6 col-sm-12">
 	<img
 		id="galleryImg"
-		src="/db{{image.0.filename}}"
-		alt="{{image.0.description}}"
+		src="/db{{image.imgURL}}"
+		alt="{{image.0.prompt}}"
 		class="card-img-top mt-3"
 	/>
-	<div class="card-body">{{user}}</div>
-	<div class="card-footer">{{timestamp}}</div>
-</div>
+	<div class="card-body">{{user_name}}</div>
+	<div class="card-footer">{{date_created}}</div>
+</div> --}}
 {{!-- TODO: update the above handlebars to pull the appropriate images from the DB --}}
