--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,8 +20,8 @@
 			@import
 			url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap");
 		</style>
-		<link rel="stylesheet" href="../../public/css/reset.css" />
-		<link rel="stylesheet" href="../../public/css/style.css" />
+		<link rel="stylesheet" href="/css/reset.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<title>headspace.ai</title>
 	</head>
 	<body>
@@ -68,6 +68,6 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		></script>
-		<script src="../../public/js/index.js"></script>
+		<script src="/js/index.js"></script>
 	</body>
 </html>
