--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,6 +69,6 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		></script>
-		<script src="../../public/js/index.js"></script>
+		<script src="/js/index.js"></script>
 	</body>
 </html>
