--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,10 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link 
+			rel="preconnect" href="https://fonts.googleapis.com" />
+		<link 
+			rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap"
 			rel="stylesheet"
@@ -20,8 +22,8 @@
 			@import
 			url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap");
 		</style>
-		<link rel="stylesheet" href="../../public/css/reset.css" />
-		<link rel="stylesheet" href="../../public/css/style.css" />
+		<link rel="stylesheet" href="/css/reset.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<title>headspace.ai</title>
 	</head>
 	<body>
@@ -70,5 +72,6 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		></script>
 		<script src="/js/index.js"></script>
+		<script src="/js/prompt.js"></script>
 	</body>
 </html>
