--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -70,5 +70,6 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		></script>
 		<script src="/js/index.js"></script>
+		<script src="/js/prompt.js"></script>
 	</body>
 </html>
