--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,22 +43,22 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<div class="navbar-nav">
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#"><i
+							<a class="nav-link active" aria-current="page" href="/"><i
 									class="bi bi-brush-fill"
 								></i>
 								Create</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link" href="#"><i class="bi bi-grid-fill"></i>
+							<a class="nav-link" href="/gallery"><i class="bi bi-grid-fill"></i>
 								Feed</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link" href="#"><i class="bi bi-person-circle"></i>
+							<a class="nav-link" href="/userGallery"><i class="bi bi-person-circle"></i>
 								My Gallery</a>
 						</div>
 						<div class="nav-item">
-							<a class="nav-link" href="#"><i class="bi bi-box-arrow-right"></i>
-								Logout</a>
+							<a class="nav-link" href="/login"><i class="bi bi-box-arrow-right"></i>
+								Login</a>
 						</div>
 					</div>
 				</div>
