--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,8 +84,14 @@ input {
 
 #loginCard {
 	margin-top: 100px;
-	color: black;
+	margin-left: auto;
+	margin-right: auto;
 	max-width: 1000px;
+	color: black;
+}
+
+#regEl, #logEl {
+	display: none;
 }
 
 .form-control {
