added script tag, deleted HTML, deleted headspaceai folder

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
 					logUser
 					logPass
 					logBtn
-				 -->
+				-->
 	<div class="card mx-3">
 		<div class="card-header">
 			<ul class="nav nav-tabs card-header-tabs">
@@ -92,3 +92,4 @@
 		</div>
 	</div>
 </div>
+<script src="/js/login.js"></script>
