--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -10,7 +10,7 @@
 			<div class="col-lg-4 col-md-6 col-sm-12">
 				<img id="galleryImg" src="{{imageURL}}" alt="{{prompt}}" class="card-img-top mt-3" />
 				<div class="card-body">{{user_name}}</div>
-				<div class="card-footer">{{date_created}}</div>
+				<div class="card-footer">{{format_date date_created}}</div>
 			</div>
 		{{/each}}
 	</div>
