added login.js api logic

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -67,8 +67,8 @@
 				</button>
 			</div>
 			<div id="logEl">
-				<label for="loginUser" class="form-label">Email Address</label>
-				<input class="form-control" id="loginUser" />
+				<label for="logEmail" class="form-label">Email Address</label>
+				<input class="form-control" id="logEmail" />
 				<div class="form-text">
 					Don't have an account yet?
 					<button
@@ -78,10 +78,10 @@
 						Register here.
 					</button>
 				</div>
-				<label for="loginPass" class="form-label">Password</label>
-				<input class="form-control" id="loginPass" />
+				<label for="logPass" class="form-label">Password</label>
+				<input class="form-control" id="logPass" />
 				<button
-					id="loginBtn"
+					id="logBtn"
 					type="submit"
 					class="btn btn-warning mt-3"
 					style="min-width: 150px"
