--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
 			class=""
 			placeholder="an acrylic painting of the lo-fi beats girl writing javascript"
 		/>
-		<div id="spinner" class="spinner-border text-warning" role="status">
+		<div id="spinner" class="spinner-border text-warning d-none" role="status">
 			<span class="visually-hidden">Loading...</span>
 		</div>
 		<button id="submit">Dream</button>
