--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -84,6 +84,8 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		></script>
+		{{#if logged_in}}
 		<script src="/js/logout.js"></script>
+		{{/if}}
 	</body>
 </html>
