--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,11 +20,13 @@
 			@import
 			url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap");
 		</style>
+		
 		<link rel="stylesheet" href="/css/reset.css" />
 		<link rel="stylesheet" href="/css/style.css" />
 		<title>headspace.ai</title>
 	</head>
 	<body>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
 			<container class="container-fluid">
@@ -81,9 +83,7 @@
 		</nav>
 		{{{body}}}
 		<footer class="fixed-bottom"></footer>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-		></script>
+	
 		{{#if logged_in}}
 		<script src="/js/logout.js"></script>
 		{{/if}}
