cleaned up file structure and debugged index.js  file

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -92,7 +92,7 @@
 							<h2>"<span id="resultPrompt">Prompt goes here</span>"</h2>
 							<p>by</p>
 							<h4 id="resultUser">Username goes here</h4>
-							<p id="resultDate">Dec 21st, 2022</p>
+							<p id="resultDate"></p>
 						</div>
 					</div>
 				</div>
