added download button

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -133,6 +133,8 @@
 				<button id="resultSave" type="button" class="btn btn-warning">
 					Save to Gallery
 				</button>
+				<a id="resultDl" href="" download><button type="button" class="btn btn-success">Download Image</button></a>
+
 			</div>
 		</div>
 	</div>
