--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,18 @@
 .header-container,
 .body-container,
 .footer-container {
-	max-width: 2000px;
+	/* max-width: 2000px; */
 	margin: 0 auto;
 }
 
 body {
 	background-color: rgb(36, 14, 27);
 	background-image: url(../assets/bg.png);
-	background-position-x: center;
+	height: 100%;
+	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 2000px;
-	max-width: 2000px;
+	background-size: cover;
+	/* max-width: 2000px; */
 	margin: 0 auto !important;
 	float: none !important;
 	font-family: "Kanit", sans-serif;
