created the result model

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -89,11 +89,11 @@
 							class="col-lg-7 col-sm-12"
 						/>
 						<div id="resultAside" class="col-lg-4 col-sm-12 my-auto">
-							<h2>"<span id="resultPrompt">Prompt goes here</span>"</h2>
-							<p>by</p>
+							<h1>"<span id="resultPrompt">Prompt goes here</span>"</h1>
+							{{!-- <p>by</p>
 							<h4 id="resultUser">Username goes here</h4>
 							<p id="resultDate"></p>
-						</div>
+						</div> --}}
 					</div>
 				</div>
 			</div>
