--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,34 +62,15 @@
 								></i>
 								My Gallery</a>
 						</div>
-
-						{{!-- -------------------------------------------------------- --}}
-						{{#if logged_in}}
-							<div class="nav-item">
-								<a class="nav-link" href="/" id="logout">
-								<i class="bi bi-box-arrow-left">
-									</i>
-										Logout
-									</a>
-							</div>
-						{{else}}
-							<div class="nav-item">
-								<a class="nav-link" href="/login" id="login"><i
-										class="bi bi-box-arrow-right"
-									></i>
-									Login</a>
-							</div>
-						{{/if}}
-						{{!-- -------------------------------------------------------- --}}
+						{{{logBtn}}}
 					</div>
 				</div>
 			</container>
 		</nav>
 		{{{body}}}
 		<footer class="fixed-bottom"></footer>
-		
-		{{#if logged_in}}
+		{{!-- {{#if logged_in}}
 		<script src="/js/logout.js"></script>
-		{{/if}}
+		{{/if}} --}}
 	</body>
 </html>
