--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -28,17 +28,6 @@
 		</div>
 		<div class="card-body">
 			<div id="regEl">
-				{{!-- <label for="regUser" class="form-label">Username</label>
-				<input class="form-control" id="regUser" /> --}}
-				{{!-- <div class="form-text">
-					Already have an account?
-					<button
-						id="toLog"
-						style="border: none; background: none; color: blue"
-					>
-						Sign in here.
-					</button>
-				</div> --}}
 				<label for="regEmail" class="form-label">Email Address</label>
 				<input
 					id="regEmail"
@@ -46,18 +35,22 @@
 					class="form-control"
 					placeholder="name@example.com"
 				/>
-					<div class="form-text">
-						Already have an account?
-						<button id="toLog" style="border: none; background: none; color: blue">
+				<div class="form-text">
+					Already have an account?
+					<button
+						id="toLog"
+						style="border: none; background: none; color: blue"
+					>
 						Sign in here.
-						</button>
-					</div>
+					</button>
+				</div>
+				<label for="regPass" class="form-label">Password</label>
 				<input
 					id="regPass"
 					type="password"
 					class="form-control"
 					aria-describedby="passwordHelpInline"
-					placeholder="password"
+					placeholder="********"
 				/>
 
 				<span id="passwordHelpInline" class="form-text">Must be 8-20 characters
@@ -85,7 +78,7 @@
 					</button>
 				</div>
 				<label for="logPass" class="form-label">Password</label>
-				<input class="form-control" id="logPass" />
+				<input type="password" class="form-control" id="logPass" />
 				<button
 					id="logBtn"
 					type="submit"
