--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -69,8 +69,8 @@
 		</nav>
 		{{{body}}}
 		<footer class="fixed-bottom"></footer>
-		{{!-- {{#if logged_in}}
+		{{#if logged_in}}
 		<script src="/js/logout.js"></script>
-		{{/if}} --}}
+		{{/if}}
 	</body>
 </html>
