--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,15 +62,37 @@
 								></i>
 								My Gallery</a>
 						</div>
-						{{{logBtn}}}
+						
+						{{#if logged_in}}
+						<div class="nav-item">
+							<a class="nav-link btn-no-style" id="logout">
+								<i class="bi bi-box-arrow-left">
+								</i>
+								Logout
+							</a>
+						</div>
+						{{!-- <script src="/js/logout.js"></script> --}}
+						{{else}}
+						<div class="nav-item">
+							<a class="nav-link" href="/login" id="login">
+							<i class="bi bi-box-arrow-right"></i>
+									Login
+								</a>
+						</div>
+						{{/if}}
 					</div>
 				</div>
 			</container>
 		</nav>
-		{{{body}}}
-		<footer class="fixed-bottom"></footer>
-		{{!-- {{#if logged_in}}
+
+		<main>
+			{{{body}}}
+		</main>
+
+		<footer></footer>
+
+		{{#if logged_in}}
 		<script src="/js/logout.js"></script>
-		{{/if}} --}}
+		{{/if}}
 	</body>
 </html>
