--- a/views/logBtn.handlebars
+++ b/views/logBtn.handlebars
@@ -1,4 +1,4 @@
-{{#if logged_in}}
+{{!-- {{#if logged_in}}
 	<div class="nav-item">
 		<a class="nav-link" href="/" id="logout">
 			<i class="bi bi-box-arrow-left">
@@ -14,4 +14,4 @@
 			></i>
 			Login</a>
 	</div>
-{{/if}}
+{{/if}} --}}
