--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
-			<container class="container-fluid">
+			<container class="container-fluid" style="max-width: 1600px">
 				<a class="navbar-brand" href="#">headspace.ai</a>
 				<button
 					class="navbar-toggler"
