changed   if (promptValue === "")  to (!promptVal

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,6 +4,7 @@
 		dream up anything with
 		<span id="heroSpan">headspace.ai</span>
 	</h1>
+	<h3>headspace.ai is an artifical intellgence powered image generation tool. </h3>
 	<div id="promptEl" class="">
 		<input
 			id="promptInput"
