added target=_blank to download btn

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -134,7 +134,7 @@
 				<button id="resultSave" type="button" class="btn btn-warning">
 					Save to Gallery
 				</button>
-				<a id="resultDl" href="" download><button type="button" class="btn btn-success">Download Image</button></a>
+				<a id="resultDl" href="" download target="_blank"><button type="button" class="btn btn-success">Download Image</button></a>
 
 			</div>
 		</div>
