added prompt value to gallery, changed bg

--- a/views/userGallery.handlebars
+++ b/views/userGallery.handlebars
@@ -5,7 +5,7 @@
 		</h1>
 		{{#each images}}
 		<div class="col-lg-4 col-md-6 col-sm-12">
-			<img id="galleryImg" src="{{imageURL}}" alt="{{prompt}}" class="card-img-top mt-3" />
+			<img id="galleryImg" src="{{imageURL}}" alt="{{promptValue}}" class="card-img-top mt-3" />
 			<div class="card-body">{{user_name}}</div>
 		</div>
 		{{/each}}
