--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,7 +129,7 @@ input {
 }
 
 #galleryEl {
-	background-color: rgb(37, 42, 46);
+	backdrop-filter: blur(100px);
 	width: 95%;
 	margin: auto;
 	margin-top: 30px;
