--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -8,8 +8,8 @@
 		</h1>
 		{{#each images}}
 			<div class="col-lg-4 col-md-6 col-sm-12">
-				<img id="galleryImg" src="{{imageURL}}" alt="{{prompt}}" class="card-img-top mt-3" />
-				<div class="card-body">{{user_name}}</div>
+				<img id="galleryImg" src="{{imageURL}}" alt="{{promptValue}}" class="card-img-top mt-3" />
+				<div class="card-body">"{{promptValue}}"</div>
 				<div class="card-footer">{{format_date date_created}}</div>
 			</div>
 		{{/each}}
