--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -53,7 +53,7 @@
 					placeholder="********"
 				/>
 
-				<span id="passwordHelpInline" class="form-text">Must be 8-20 characters
+				<span id="passwordHelpInline" class="form-text mt-2">Must be 8-20 characters
 					long.</span>
 				<div></div>
 				<button
