--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,8 @@
 		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
 			<container class="container-fluid" style="max-width: 1600px">
-				<a class="navbar-brand" href="#">headspace.ai</a>
+				<img id="logo" src="/public/assets/iconlight.png"
+				<a id="logo" class="navbar-brand" href="#">headspace.ai</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -32,7 +33,7 @@
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<div class="navbar-nav">
 						<div class="nav-item">
-							<a class="nav-link active" aria-current="page" href="/"><i
+							<a class="nav-link" aria-current="page" href="/"><i
 									class="bi bi-brush-fill"
 								></i>
 								Create</a>
