--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,6 +2,7 @@
 <div id="heroEl" class="">
 	<h1 id="hero" class="text-center">
 		dream up anything with
+		<img id="heroIcon" src="/public/assets/iconLight.png"
 		<span id="heroSpan">headspace.ai</span>
 	</h1>
 	<h3>headspace.ai is an artifical intellgence powered image generation tool. </h3>
