--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
 	float: none !important; */
 	font-family: "Kanit", sans-serif;
 	color: white;
+	text-shadow: 0px 0px 20px rgba(0, 0, 1, 0.5);
 }
 
 input {
@@ -25,7 +26,8 @@ input {
 }
 
 .navbar {
-	backdrop-filter: blur(15px);
+	background-color: rgba(0, 0, 0, 0.25);
+	backdrop-filter: blur(30px);
 	color: white;
 	font-family: "Kanit", sans-serif;
 	border: 2px solid rgba(0, 0, 0, 0.095);
@@ -45,9 +47,10 @@ input {
 }
 
 #heroEl {
-	width: 90%;
+	width: 95%;
 	max-width: 1500px;
-	backdrop-filter: blur(15px);
+	background-color: rgba(0, 0, 0, 0.25);
+	backdrop-filter: blur(30px);
 	margin: auto;
 	margin-top: 10%;
 	padding: 30px;
