--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
-			<container class="container-fluid" style="max-width: 1600px">
-				<img id="logo" src="/public/assets/iconlight.png"
-				<a id="logo" class="navbar-brand" href="#">headspace.ai</a>
+			<container class="container-fluid" style=" margin-left: 45px;">
+				<img src="../public/assets/iconlight.png" style="height: 20px; margin-right: 5px;">
+				<a class="navbar-brand" href="/">headspace.ai</a>
 				<button
 					class="navbar-toggler"
 					type="button"
