--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
 			<container class="container-fluid" style=" margin-left: 45px;">
-				<img src="../public/assets/iconlight.png" style="height: 20px; margin-right: 5px;">
+				<img src="/assets/iconlight.png" style="height: 20px; margin-right: 5px;">
 				<a class="navbar-brand" href="/">headspace.ai</a>
 				<button
 					class="navbar-toggler"
