--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <!-- prompt container -->
 <div id="heroEl" class="">
 	<h1 id="hero" class="text-center">dream up anything with <span id="heroSpan">headspace.ai</span></h1>
-	<h4 class="text-center my-4" style="font-weight:400">headspace.ai is an artifical intellgence powered image generation tool. Enter any prompt to begin.</h4>
+	<h4 class="text-center my-4" style="font-weight:300">headspace.ai uses a neural network to turn natural text prompts into highly detailed images.</h4>
 	<div id="promptEl" class="">
 		<input
 			id="promptInput"
