--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,10 +59,19 @@ input {
 	font-size: 40pt;
 	font-family: "Kanit", sans-serif;
 	font-weight: 400;
+	color: #ffbb3ede
 }
 
 #heroSpan {
 	font-weight: 700;
+	color: white;
+}
+
+#heroIcon {
+	display:inline-block;
+	height: 55px;
+	margin: 0px 7px 0px 0px;
+	transform:translateY(-5px);
 }
 
 #promptEl {
