--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ input {
 	font-size: 40pt;
 	font-family: "Kanit", sans-serif;
 	font-weight: 400;
-	color: #ffbb3ede
+	color: #ffe13e
 }
 
 #heroSpan {
