--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <!-- prompt container -->
 <div id="heroEl" class="">
-	<h1 id="hero" class="text-center">dream up anything with <span id="heroSpan">headspace.ai</span></h1>
+	<h1 id="hero" class="text-center">dream up anything with <span id="heroSpan"><img id="heroIcon" src="/assets/iconlight.png">headspace.ai</span></h1>
 	<h4 class="text-center my-4" style="font-weight:300">headspace.ai uses a neural network to turn natural text prompts into highly detailed images.</h4>
 	<div id="promptEl" class="">
 		<input
