--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <!-- prompt container -->
 <div id="heroEl" class="">
 	<h1 id="hero" class="text-center">dream up anything with <span id="heroSpan"><img id="heroIcon" src="/assets/iconlight.png">headspace.ai</span></h1>
-	<h4 class="text-center my-4" style="font-weight:300">headspace.ai uses a neural network to turn natural text prompts into highly detailed images.</h4>
+	<h4 class="text-center my-4" style="font-weight:300">headspace.ai uses a neural network to generate images out of natural text prompts.</h4>
 	<div id="promptEl" class="">
 		<input
 			id="promptInput"
