--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- nav el -->
 		<nav class="navbar navbar-expand-lg">
-			<container class="container-fluid" style=" margin-left: 45px;">
+			<container class="container-fluid">
 				<img src="/assets/iconlight.png" style="height: 20px; margin-right: 5px;">
 				<a class="navbar-brand" href="/">headspace.ai</a>
 				<button
