--- a/views/userGallery.handlebars
+++ b/views/userGallery.handlebars
@@ -6,7 +6,7 @@
 		{{#each images}}
 		<div class="col-lg-4 col-md-6 col-sm-12">
 			<img id="galleryImg" src="{{imageURL}}" alt="{{promptValue}}" class="card-img-top mt-3" />
-			<div class="card-body">{{user_name}}</div>
+			<div class="card-body" style="text-align: center;">"{{promptValue}}"</div>
 		</div>
 		{{/each}}
 	</div>
