added margin to gallery labels

--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -9,7 +9,7 @@
 		{{#each images}}
 			<div class="col-lg-4 col-md-6 col-sm-12">
 				<img id="galleryImg" src="{{imageURL}}" alt="{{promptValue}}" class="card-img-top mt-3" />
-				<div class="card-body" style="text-align: center;">"{{promptValue}}"</div>
+				<div class="card-body my-3" style="text-align: center;">"{{promptValue}}"</div>
 			</div>
 		{{/each}}
 	</div>
