--- a/views/gallery.handlebars
+++ b/views/gallery.handlebars
@@ -7,11 +7,14 @@
 			Feed
 		</h1>
 		{{#each images}}
+		{{!-- {{#if date_created}} --}}
+		{{#if (shouldRender date_created)}}
 			<div class="col-lg-4 col-md-6 col-sm-12">
 				<img id="galleryImg" src="{{imageURL}}" alt="{{prompt}}" class="card-img-top mt-3" />
 				<div class="card-body">{{user_name}}</div>
 				<div class="card-footer">{{format_date date_created}}</div>
 			</div>
+			{{/if}}
 		{{/each}}
 	</div>
 </section>
