--- a/views/userGallery.handlebars
+++ b/views/userGallery.handlebars
@@ -4,10 +4,12 @@
 			My Gallery
 		</h1>
 		{{#each images}}
+		{{#if (shouldRender date_created)}}
 		<div class="col-lg-4 col-md-6 col-sm-12">
 			<img id="galleryImg" src="{{imageURL}}" alt="{{prompt}}" class="card-img-top mt-3" />
 			<div class="card-body">{{user_name}}</div>
 		</div>
+		{{/if}}
 		{{/each}}
 	</div>
 </section>
